--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,3 +1,4 @@
+<meta property="og:site_name" content="DataFront" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
