--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-primary is-bold">
     <div class="navbar-brand">
-        <a class="navbar-item">
+        <a class="navbar-item" href="{{ site.baseurl }}/">
             DataFront
         </a>
         <span class="navbar-burger burger" data-target="navbarMenuHeroA">
@@ -11,11 +11,11 @@
     </div>
     <div id="navbarMenuHeroA" class="navbar-menu">
         <div class="navbar-end">
-            <a class="navbar-item" href="{{ site.baseurl }}/">
-                Home
-            </a>
             <a class="navbar-item" href="{{ site.baseurl }}/Binomial-Distribution-Calculator">
-                Binomial Calculator
+                Binomial Distribution
+            </a>
+            <a class="navbar-item" href="{{ site.baseurl }}/Expected-Value-Calculator">
+                Expected Value
             </a>
             <span class="navbar-item">
                 <a class="button is-primary is-inverted" href="https://github.com/MatheusR42/DataFront" target="_blank">
