feat: expected value calculator

--- a/assets/sass/load.scss
+++ b/assets/sass/load.scss
@@ -1,1 +1,4 @@
-
+/* -------------------------------------------------------- */
+/* II.  Generic
+/* -------------------------------------------------------- */
+@import '_generic.scss';
